Add basic html markup, static portfolio content and placeholders

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,73 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <nav>
+    <ul>
+        <li><a href="#">> Home</a></li>
+        <li><a href="#about-me">> About Me</a></li>
+        <li><a href="#projects">> Projects</a></li>
+        <li><a href="#skills">> Skills</a></li>
+        <li><a href="#contact">> Contact</a></li>
+    </ul>
+    </nav>
+
+    <section id="hero">
+        <p class="code">$ whoami</p>
+        <h1>I am Brian Magana</h1>
+        <p>BACKEND DEVELOPER</p>
+        <p>Developing solutions to common problems</p>
+        <button>> Contact Me</button>
+        <button>> Learn More</button>
+    </section>
+
+    <section id="about-me">
+        <h2>~$ About Me/</h2>
+        <p class="code">$ cat about_me.txt</p>
+        <p>I'm a backend-focused developer with experience building Python web applications using Django. I'm always looking to expand my knowledge and take pride in delivering well-crafted, reliable solutions. Passionate about technology, I aim for quality and attention to detail in every project I work on.</p>
+        <button>> Download Resume</button>
+    </section>
+
+    <section id="projects">
+        <h2>~$ Projects/</h2>
+        <p class="code">$ ls -l --big-font projects/</p>
+        <ul>
+            <li>project item list</li>
+        </ul>
+    </section>
+
+    <section id="skills">
+        <h2>~$ Skills/</h2>
+        <p class="code">$ tree skills/</p>
+        <ul>
+            <li>skill items</li>
+        </ul>
+    </section>
+
+    <section id="education">
+        <h2>~$ Education/</h2>
+        <p class="code">$ cat education.txt --bigger-font</p>
+        <ul>
+            <li>Education items</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>~$ Contact/</h2>
+        <p class="code">~$ cat contact.txt --center</p>
+        <pre>            +═══════════════════════════+ 
+            ||           BackEnd Developer                              ║||
+            ║        
+            ||                    john.doe@example.com              ║||
+            ║         
+            ||                    github.com/johndoe                    ║||
+            ║  
+            ||                    linkedin.com/in/johndoe              ║||
+            ╚+═══════════════════════════+ 
+        </pre>
+    </section>
+
+    <footer>
+        <p>portfolio webpage line 256/278 (END) (contact me for help or close the window to quit)</p>
+    </footer>
 </body>
 </html>
