Adjust presentation card in Contact

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,16 +102,18 @@
     <section id="contact">
         <h2>~$ Contact/</h2>
         <p class="code">~$ cat contact.txt --center</p>
-        <pre>            +═══════════════════════════+ 
-            ||           BackEnd Developer                              ║||
-            ║        
-            ||                    john.doe@example.com              ║||
-            ║         
-            ||                    github.com/johndoe                    ║||
-            ║  
-            ||                    linkedin.com/in/johndoe              ║||
-            ╚+═══════════════════════════+ 
-        </pre>
+        <div class="card">
+            <p>Backend Developer</p>
+            <div class="contact-item">
+                <i>icon</i> <span>john.doe@example.com </span>
+            </div>
+            <div class="contact-item">
+                <i>icon</i> <span>github.com/johndoe</span>
+            </div>
+            <div class="contact-item">
+                <i>icon</i> <span>linkedin.com/in/johndoe</span>
+            </div>
+        </div>
     </section>
 
     <footer>
