--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <li><a href="#about-me">> About Me</a></li>
         <li><a href="#projects">> Projects</a></li>
         <li><a href="#skills">> Skills</a></li>
+        <li><a href="#education">> Education</a></li>
         <li><a href="#contact">> Contact</a></li>
     </ul>
     </nav>
