--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,20 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <nav>
-    <ul>
-        <li><a href="#">> Home</a></li>
-        <li><a href="#about-me">> About Me</a></li>
-        <li><a href="#projects">> Projects</a></li>
-        <li><a href="#skills">> Skills</a></li>
-        <li><a href="#education">> Education</a></li>
-        <li><a href="#contact">> Contact</a></li>
-    </ul>
-    </nav>
+    <header>
+        <nav>
+        <ul class="navbar">
+            <li><a class="simple-link" href="#">> Home</a></li>
+            <li><a class="simple-link" href="#about-me">> About Me</a></li>
+            <li><a class="simple-link" href="#projects">> Projects</a></li>
+            <li><a class="simple-link" href="#skills">> Skills</a></li>
+            <li><a class="simple-link" href="#education">> Education</a></li>
+            <li><a class="simple-link" href="#contact">> Contact</a></li>
+        </ul>
+        </nav>
+    </header>
 
+    <main class="content">
     <section id="hero">
         <p class="code">$ whoami</p>
         <h1>I am Brian Magana</h1>
@@ -121,6 +124,7 @@
             </div>
         </div>
     </section>
+    </main>
 
     <footer>
         <p>portfolio webpage line 256/278 (END) (contact me for help or close the window to quit)</p>
