--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,11 +93,42 @@ html {
     color: var(--code-text-color);
 }
 
-/*
+.green-text {
+    color: var(--main-color);
+}
+
+.pinky-text {
+    color: var(--secondary-color);
+}
+
+
 #hero {
     display: flex;
+    margin-top: 20vh;
     
     flex-direction: column;
     align-items: center;
 }
-*/
+
+#hero h1 {
+    margin: 0;
+
+    font-size: 2.5rem;
+    font-weight: normal;
+}
+
+#hero .title {
+    margin: 12px 0 0 0;
+    font-size: 4rem;
+}
+
+#hero .slogan {
+    margin: 8px 0 80px 0;
+    font-size: 1.25rem;
+}
+
+#hero .btn-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
