--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
     <section class="section" id="hero">
         <p class="code">$ whoami</p>
         <h1>I am Brian Magana</h1>
-        <p>BACKEND DEVELOPER</p>
-        <p>Developing solutions to common problems</p>
-        <div>
+        <p class="title green-text">BACKEND DEVELOPER</p>
+        <p class="slogan">Developing solutions to common problems</p>
+        <div class="btn-container">
             <a class="btn" href="#contact">> Contact Me</a>
             <a class="btn" href="#about-me">> Learn More</a>
         </div>
