--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,3 +135,26 @@ html {
     display: flex;
     justify-content: space-evenly;
 }
+
+h2 {
+    margin: 0;
+    margin-bottom: 28px;
+
+    font-weight: normal;
+    font-size: 2rem;
+}
+
+#about-me {
+    padding-top: 10vh;
+}
+
+#about-me .yapping {
+    margin-top: 0;
+    margin-bottom: 60px;
+
+    font-size: 1.25rem;
+}
+
+#about-me .indented {
+    padding-left: 15%;
+}
