--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,14 @@
 
     <section class="section scroll-into" id="about-me">
         <h2>~$ About Me/</h2>
-        <p class="code">$ cat about_me.txt</p>
-        <p>I'm a backend-focused developer with experience building Python web applications using Django. I'm always looking to expand my knowledge and take pride in delivering well-crafted, reliable solutions. Passionate about technology, I aim for quality and attention to detail in every project I work on.</p>
-        <a class="btn" href="{{ url_for('static', filename='files/CV.pdf') }}" target="_blank">> Open Resume</a>
+        <div class="indented">
+            <p class="code">$ cat about_me.txt</p>
+            <p class="yapping">
+                I'm a backend-focused developer with experience building Python web applications using Django. 
+                I'm always looking to expand my knowledge and take pride in delivering well-crafted, reliable solutions. 
+                <span>Passionate about technology, I aim for quality and attention to detail in every project I work on.</span></p>
+            <a class="btn" href="{{ url_for('static', filename='files/CV.pdf') }}" target="_blank">> Open Resume</a>
+        </div>
     </section>
 
     <section class="section scroll-into" id="projects">
