Style footer section

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,8 +127,8 @@
     </section>
     </main>
 
-    <footer>
-        <p>portfolio webpage line 256/278 (END) (contact me for help or close the window to quit)</p>
+    <footer class="footer">
+        <p>portfolio webpage line 130/134 (END) (contact me for help or close the window to quit)</p>
     </footer>
 </body>
 </html>
