--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,10 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    margin: 0;
+}
+
 .content {
     padding: 0;
 }
@@ -215,4 +219,25 @@ h2 {
 
 .project-link .skills {
     flex-basis: 60%;
+}
+
+
+
+
+
+
+
+.footer {
+    margin: 0;
+    padding: 0.75rem 0;
+
+    font-size: 1rem;
+    background-color: var(--main-color);
+}
+
+.footer p {
+    margin: 0;
+    padding-left: 0.5rem;
+
+    color: black;
 }
