--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,6 +221,46 @@ h2 {
     flex-basis: 60%;
 }
 
+.skill-tree,
+.skill-tree ul {
+    list-style: none;
+    font-size: 1.5rem;
+
+    margin: 0;
+    padding-left: 3.5rem;
+    position: relative; 
+}
+
+.skill-tree ul::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0.6rem; 
+    width: 1px;
+    height: 100%;
+    background-color: #888; 
+  }
+
+.skill-tree li {
+    position: relative;      
+    margin: 0.5rem 0;       
+}
+  
+.skill-tree li::before {
+    content: '';
+    position: absolute;
+    top: 0.75rem;
+    left: -2.90rem;
+    width: 2.6rem; 
+    height: 1px;
+    background-color: #888;
+}
+
+.node,
+.leaf {
+  display: inline-block;
+  padding-left: 0.5rem;
+}
 
 
 
