Style education section

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,16 +94,16 @@
     <section class="section scroll-into" id="education">
         <h2>~$ Education/</h2>
         <p class="code">$ cat education.txt --bigger-font</p>
-        <ul>
-            <li>
-                <p>Bachelor of Computer Engineering</p>
+        <ul class="education-list">
+            <li class="career-item">
+                <p class="career-name green-text">Bachelor of Computer Engineering</p>
                 <p>Universidad de Guadalajara --- 2018 - 2024</p>
             </li>
             {% for certificate in certificates %}
             <li>
-                <p><span>Certificate:</span> {{ certificate.name }} </p>
+                <p><span class="pinky-text">Certificate:</span> {{ certificate.name }} </p>
                 <p> {{ certificate.company }} --- {{ certificate.year }} </p>
-                <p><span>Skills:</span> {{ ", ".join(certificate.skills) }} </p>
+                <p><span class="green-text">Skills:</span> {{ ", ".join(certificate.skills) }} </p>
             </li>
             {% endfor %}
         </ul>
