--- a/static/css/style.css
+++ b/static/css/style.css
@@ -262,9 +262,27 @@ h2 {
   padding-left: 0.5rem;
 }
 
+.education-list {
+    list-style: none;
+    font-size: 1.5rem;
+}
 
+.career-name {
+    font-size: 1.75rem;
+}
 
+.education-list p {
+    margin: 0;
+    margin-bottom: 0.35rem;
+}
 
+.education-list li {
+    margin-bottom: 2.5rem;
+}
+
+.education-list .career-item {
+    margin-bottom: 4.5rem;
+}
 
 
 .footer {
