--- a/static/css/style.css
+++ b/static/css/style.css
@@ -284,6 +284,62 @@ h2 {
     margin-bottom: 4.5rem;
 }
 
+.card {
+    max-width: 440px;
+    border: white solid 1px;
+    margin: 3rem auto;
+    padding-left: 90px;
+}
+
+.card p {
+    margin: 0;
+    margin-bottom: 1.25em;
+}
+
+.card .name-info {
+    margin-top: 1em;
+    margin-bottom: 0.1em;
+    font-size: 1.5rem;
+}
+
+.title-info {
+    position: relative;
+    display: inline-block; 
+    font-size: 1rem;
+}
+
+.title-info::after {
+    content: "";
+    display: block;
+    height: 1px;
+    background-color: currentColor; 
+    margin-top: 4px; 
+}
+
+.contact-item {
+    margin-bottom: 1rem;
+
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.contact-icon {
+    fill: white;
+    height: 2em;
+    width: auto;
+
+    margin-right: 1em;
+}
+
+#contact .simple-link {
+    font-weight: normal;
+    color: hsl(0 0 80%);
+}
+
+#contact .simple-link:hover {
+    color: hsl(0 0 100%);
+}
 
 .footer {
     margin: 0;
