--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,6 +108,7 @@ body {
 .code {
     color: var(--code-text-color);
     font-size: 1rem;
+    font-weight: normal;
     margin-bottom: 0.75rem;
 }
 
@@ -366,4 +367,105 @@ h2 {
 .footer p {
     margin: 0;
     color: black;
+}
+
+
+/* Projects info pages styles */
+.man-title {
+    padding: 0;
+    margin: 0;
+
+    font-size: 1rem;
+    font-weight: normal;
+
+    margin-top: 2.75rem;
+    padding-left: 2rem;
+}
+
+.less-margin-title {
+    margin-top: 1.75rem;
+}
+
+.man-content {
+    padding: 0;
+    margin: 0;
+
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1.3;
+
+    padding-top: 0.25rem;
+    padding-left: 5rem;
+}
+
+.no-height {
+    height: auto;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+.no-margin {
+    margin: 0;
+}
+
+.paddin-left-link {
+    margin-left: 0.25rem;
+}
+
+.no-width {
+    min-width: auto;
+    max-width: auto;
+    width: auto;
+}
+
+.border-sides {
+    border-left: white solid 1px;
+    border-right: white solid 1px;
+}
+
+.wrapper {
+    border: 1px solid white;
+    padding: 2rem;
+    padding-right: 4rem;
+    margin: 0;
+
+    margin-top: 5vh;
+    margin-right: 29vw;
+    margin-left: 29vw;
+    min-width: 600px;
+    max-width: 800px;
+}
+
+.return-icon {
+    stroke: hsl(0 0 70%);
+    margin: 0;
+    padding: 0;
+    margin-top: -2rem;
+    margin-left: -0.75rem;
+
+    height: 2em;
+    width: auto;
+}
+
+.return-icon:hover {
+    stroke: hsl(0 0 100%);
+}
+
+.description-section,
+.description-br {
+    display: block;
+}
+
+.description-section {
+    margin-top: 2rem;
+}
+
+.description-br {
+    margin-top: 0.5rem;
+}
+
+.body-bottom-space {
+    padding-bottom: 20vh;
 }
