Change footer text

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
     </main>
 
     <footer class="footer">
-        <p>portfolio webpage line 130/134 (END) (contact me for help or close the window to quit)</p>
+        <p>web portfolio line 137/141 (END) (contact me for help or close the window to quit)</p>
     </footer>
     <script src="{{ url_for('static', filename='js/contact.js') }}"></script>
 </body>
