Update file and change text in about me section

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         <div class="indented">
             <p class="code">$ cat about_me.txt</p>
             <p class="yapping">
-                I'm a backend-focused developer with experience building Python web applications using Django. 
+                I'm a backend focused developer with experience building Python web applications using Django. 
                 I'm always looking to expand my knowledge and take pride in delivering well-crafted, reliable solutions. 
                 <span>Passionate about technology, I aim for quality and attention to detail in every project I work on.</span></p>
             <a class="btn smaller-button" href="{{ url_for('static', filename='files/CV.pdf') }}" target="_blank">> Open Resume</a>
