--- a/templates/projects/robot.html
+++ b/templates/projects/robot.html
@@ -14,7 +14,7 @@
 <body class="body-bottom-space">
     <div class="wrapper">
     <section class="section no-height no-padding no-width">
-        <a href="/">
+        <a href="/#projects">
             <svg class="return-icon" height="20px" width="auto" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title/><polyline points="112 160 48 224 112 288" style="fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/><path d="M64,224H358c58.76,0,106,49.33,106,108v20" style="fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/></svg>
         </a>
         <h1 class="code">$ man robot</h1>
