--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         </div>
     </section>
 
-    <section class="section scroll-into" id="about-me">
+    <section class="section scroll-into section-full-height" id="about-me">
         <h2>~$ About Me/</h2>
         <div class="indented">
             <p class="code">$ cat about_me.txt</p>
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <section class="section scroll-into" id="projects">
+    <section class="section scroll-into section-full-height" id="projects">
         <h2>~$ Projects/</h2>
         <p class="code">$ ls -l projects/</p>
         <ul class="project-list">
@@ -73,7 +73,7 @@
         </ul>
     </section>
 
-    <section class="section scroll-into" id="skills">
+    <section class="section scroll-into section-skills-height" id="skills">
         <h2>~$ Skills/</h2>
         <p class="code">$ tree skills/</p>
         <ul class="skill-tree">
@@ -91,7 +91,7 @@
         </ul>
     </section>
 
-    <section class="section scroll-into" id="education">
+    <section class="section scroll-into section-full-height" id="education">
         <h2>~$ Education/</h2>
         <p class="code">$ cat education.txt --bigger-font</p>
         <ul class="education-list">
