--- a/templates/projects/robot.html
+++ b/templates/projects/robot.html
@@ -9,7 +9,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Project | Brian Magaña</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='icons/favicon.png') }}">
 </head>
 <body class="body-bottom-space">
     <div class="wrapper">
