--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href={{ url_for('static', filename="css/style.css") }}>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Brian Magaña | Backend Developer</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='icons/favicon.png') }}">
 </head>
 <body>
     <header class="scroll-into">
