--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
             <p class="yapping">
                 I'm a backend focused developer with experience building Python web applications using Django. 
                 I'm always looking to expand my knowledge and take pride in delivering well-crafted, reliable solutions. 
-                <span>Passionate about technology, I aim for quality and attention to detail in every project I work on.</span></p>
+                <span class="breakline">Passionate about technology, I aim for quality and attention to detail in every project I work on.</span></p>
             <a class="btn smaller-button" href="{{ url_for('static', filename='files/CV.pdf') }}" target="_blank">> Open Resume</a>
         </div>
     </section>
