Adjust projects section to phone layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -544,6 +544,10 @@ h2 {
     .smaller-button {
         width: 55vw;
     }
+
+    .project-link .skills {
+        flex-basis: auto;
+    }
 }
 
 
